fix overflow bug

--- a/public/css/profile1.css
+++ b/public/css/profile1.css
@@ -78,6 +78,9 @@
     font-size: 50px;
     line-height: 55px;
     margin-bottom: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .back h1 span{
     font-weight: 400;
